# Chords

./: CMakeLists.txt  addons.make  config.make
Chords.xcodeproj/: project.pbxproj
Chords.xcodeproj/xcshareddata/xcschemes/: Chords Debug.xcscheme  Chords Release.xcscheme
Chords.xcodeproj/xcuserdata/laura.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
src/: ChordsEngine.cpp  ChordsEngine.hpp  GuiApp.cpp  GuiApp.hpp  KeyboardReader.cpp  KeyboardReader.hpp  PolySynth.cpp  PolySynth.hpp  Sequence.cpp  Sequence.hpp  SequenceEvent.cpp  SequenceEvent.hpp  SoundEngine.cpp  SoundEngine.hpp  main.cpp  ofApp.cpp  ofApp.h  ofxBpm.cpp  ofxBpm.h  synth.h
src/MusicTheory/: Interval.cpp  Interval.hpp  Note.cpp  Note.hpp  Scale.cpp  Scale.hpp
src/Synths/: PolySynth.cpp
src/Tracks/: ChordsTrack.cpp  ChordsTrack.hpp  Track.cpp  Track.hpp
